objects/object__c.object
<CustomObject>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_State__c</fullName>
        <label>Select State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>